# pervie

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: build-and-release.yaml
src/: app.rs  main.rs  utils.rs
src/core/: disk_ops.rs  flasher.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/ui/: dashboard.rs  mod.rs  prompt.rs
