[package]
name = "pervie"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
plist = "1.6"
libc = "0.2"
sudo = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10.9"
futures-util = "0.3.31"
